<resources>
	<string name="app_name">Apnea</string>
	<string name="main_act_title">Apnea tables</string>

	<string name="navigation_drawer_open" translatable="false">Open</string>
	<string name="navigation_drawer_close" translatable="false">Close</string>

	<string name="action_settings">Settings</string>

	<!-- Strings related to Settings -->
	<string name="pref_main_cat">Main</string>
	<string name="pref_notify_cat">Notifications</string>
	<string name="pref_o_cat">Training O2</string>
	<string name="pref_co_cat">Training CO2</string>

	<string name="pref_best_record">Best apnea record</string>
	<string name="pref_device_address">Device address</string>

	<string name="pref_sec_suff">sec.</string>

	<string name="pref_title_vibrate">Vibrate</string>
	<string name="pref_title_speech">Speech</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="nav_title_info">Info</string>
	<string name="nav_title_record">Record</string>
	<string name="nav_title_spo">Measure log</string>

	<string name="nav_title_tables">Tables</string>
	<string name="nav_title_settings">Settings</string>
	<string name="def_tab_title_o2">Default O2</string>
	<string name="def_tab_title_co2">Default CO2</string>
	<string name="img_lungs" translatable="false">Lungs</string>
	<string name="pref_perc_suff" translatable="false">%</string>
	<string name="my_mail" translatable="false">ivangurkin@gmail.com</string>

	<string name="ok" translatable="false">OK</string>
	<string name="cancel">Cancel</string>

	<string name="total_time">Time: %1$s</string>

	<string name="speech_30sec" translatable="false">30 seconds</string>
	<string name="speech_10sec" translatable="false">10 seconds</string>
	<string name="speech_breathe" translatable="false">breathe</string>
	<string name="speech_hold" translatable="false">hold your breath</string>

	<string name="timer_hold_lb">Hold</string>
	<string name="timer_breath_lb">Breath</string>

	<string name="snack_stop_session">Stop session?</string>
	<string name="snack_reset_sets">Reset settings?</string>
	<string name="snack_tab_dev">Coming soon. Can create own tables.</string>

	<string name="table_description_calc">Calculated based on the settings</string>
	<string name="btn_discard">Discard</string>
	<string name="default_text" translatable="false">Default text</string>

	<string name="sum_max_time">Maximum hold breathe time:</string>
	<string name="titl_co2_max_perc">Percent of maximum</string>
	<string name="titl_co2_beg_time">Breathe begin time</string>
	<string name="sum_co2_beg_time">Breathe time on start cycle:</string>
	<string name="titl_co2_reduce">Interval reduce</string>
	<string name="speech_im_ok" translatable="false">I am ok</string>
	<string name="notif_breathe">Breathe: %1$s</string>
	<string name="notif_hold">Hold breathe: %1$s</string>
	<string name="dlg_sess_complete">Session complete!</string>
	<string name="dlg_im_ok" translatable="false">I`m OK!</string>
	<string name="tst_cant_edit">You can not edit while session is started</string>

	<string name="t_co2_end_time">End time breathe</string>
	<string name="p_co2_end_time">Time breathe on end cycle:</string>
	<string name="t_o2_timeout">Breathe</string>
	<string name="p_o2_timeout">Time breathe between holds:</string>
	<string name="t_o2_increase_time">Increase time</string>
	<string name="t_o2_start_time">Begin hold</string>
	<string name="p_o2_start_time">Begin hold in series:</string>
	<string name="t_o2_end_time">End hold</string>
	<string name="p_o2_end_time">End hold in series:</string>
	<string name="s_notify_vibrate">Vibrate on notification</string>
	<string name="s_notify_voice">Speech on notification</string>

	<string name="s_allow_bt">When connecting the battery consumes more</string>
	<string name="t_allow_bt">Connect oximeter</string>

	<string name="t_notify_minute">Every minute</string>
	<string name="s_notify_minute">Notification every minute before end</string>

	<string name="t_notify_30sec">Last 30 seconds</string>
	<string name="s_notify_30sec">Alert for 30 seconds before the end</string>

	<string name="t_notify_10sec">Last 10 seconds</string>
	<string name="s_notify_10sec">Alert for 10 seconds before the end</string>

	<string name="t_notify_5sec">Last 5 seconds</string>
	<string name="s_notify_5sec">Last countdown before end</string>

	<string name="s_notify_cat">Notify timeouts</string>

	<string name="t_notify_type">Notify types</string>
	<string name="s_notify_type">Set types notifications on events</string>
	<string name="bt_text_start">Start</string>
	<string name="bt_text_stop">Stop</string>
	<string name="arc_best_best">Best</string>
	<string name="dlg_new_rec">Are you new record?</string>
	<string name="coming_soon" translatable="false">Coming soon</string>

	<string name="add_row">Add row</string>
	<string name="save_table">Save table</string>
	<string name="table_name">Table name</string>
	<string name="tab_description">Description</string>
	<string name="err_tab_save">Error save table</string>

	<string name="valid_o2_simple">Invalid O2 settings</string>
	<string name="valid_co2_simple">Invalid CO2 settings</string>

	<string name="coming_soon_oxy">Coming soon</string>
	<string name="spo_soon">Coming soon (december 2016)!\r\nSpO2 and heart rate log and graphs.\r\nSystem requirements:\r\n• bluetooth 4.0\r\n• oximeter JPD-500F\r\n• android 4.3</string>
	<string name="invalid_num_format">Invalid number format, must be total seconds</string>
	<string name="axis_spo">SpO%</string>
	<string name="axis_pulse">Pulse</string>
	<string name="axis_indicators">Indicators</string>
	<string name="axis_time">Time</string>
	<string name="chart_row_total">Session time: %s</string>
	<string name="chart_row_date">Date: %s</string>
	<string name="lb_spo" translatable="false">SpO</string>
	<string name="lb_bpm">——bpm</string>
	<string name="lb_spo_vl" translatable="false">——%</string>
	<string name="time_added">Time added</string>
</resources>
