<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group
		android:id="@+id/grp1"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_info"
			android:icon="@drawable/ic_help"
			android:title="@string/nav_title_info"/>
	</group>

	<group
		android:id="@+id/grp5"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_about"
			android:icon="@drawable/ic_developer_board"
			android:title="@string/nav_title_about"/>
	</group>

	<group
		android:id="@+id/grp3"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_record"
			android:icon="@drawable/ic_clock"
			android:title="@string/nav_title_record"/>
	</group>

	<group
		android:id="@+id/grp2"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_tables"
			android:checked="true"
			android:icon="@drawable/ic_tables"
			android:title="@string/nav_title_tables"/>
	</group>

	<group
		android:id="@+id/grp4"
		android:checkableBehavior="single">
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_settings"
			android:title="@string/nav_title_settings"/>
	</group>
</menu>
